[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alex.Wang", email = ""},
]
dependencies = [
    "playwright>=1.28.0",
    "pytest>=7.2.0",
    "pytest-html>=3.2.0",
    "pytest-playwright>=0.3.0",
    "pytest-html-reporter>=0.2.9",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
